--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Parse date values to return a interval, to be used in queries with dates.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ."
   },
   "repository": {
     "type": "git",
